--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "nuxt": "^1.4.2",
+    "vuelidate": "^0.7.4",
     "vuetify": "^1.2.1"
   },
   "devDependencies": {
